@@ -1,5 +1,13 @@
 2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int] Include program name in autogenerated tmpfile name.
+
+	* b-feph.c (struct ephemstuff):
+	Drop member ‘tmpdir’; add member ‘standard’.
+	(jam_sff): Include ‘PROGRAM (name)’ in ‘EPH (standard)’.
+
+2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int] Presume availability of ‘strsignal’.
 
 	* b-isr.c: Don't #include "sig2str.h".
